client/landing/gutenboarding/onboarding-block/acquire-intent/style.scss
@import 'assets/stylesheets/gutenberg-base-styles';
@import '../../mixins';
@import '../../variables.scss';

.acquire-intent {
	@include onboarding-heading-text-mobile;
	background-color: var( --contrastColor );
	color: var( --mainColor );
	tab-size: 4;
	position: fixed;
	min-height: calc( 100% - #{$gutenboarding-header-height} );
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin: 0 -20px;
	padding: 25px 20px 20px;
	transition: color $acquire-intent-transition-duration
			$acquire-intent-transition-algorithm,
		background-color $acquire-intent-transition-duration
			$acquire-intent-transition-algorithm;

	@include break-small {
		margin: 0 -44px; // override block margins
		padding: 0 120px;
		font-size: 64px;
		line-height: 80px;
		justify-content: center;
	}

	@include break-medium {
		margin: 0 -88px; // override block margins
		padding: 12px 170px 0;
	}
}

.acquire-intent__footer {
	transition: opacity, transform $acquire-intent-transition-duration $acquire-intent-transition-algorithm;

	&--hidden {
		// use this to fade-in the footer; since the buttons are disabled we don't need to hide them
		opacity: 0;
		visibility: hidden;
	}

	align-self: flex-end;

	@include break-small {
		align-self: flex-start;
	}
}

.acquire-intent__mobile-back-arrow {
	display: block;
	margin-bottom: 25px;
	transform: rotate( 180deg );
}

.madlib__input {
	@include onboarding-font-recoleta;
	background: transparent;
	border: none;
	font-size: inherit;
	line-height: 1em;
	word-break: break-word;
	height: 1.01em;
	padding: 0;

	color: var( --mainColor );
	border-bottom: 2px solid var( --mainColor );

	&:focus {
		outline: none;
	}

	// TODO focus for accessibility?
	// .accessible-focus &:focus {
	// 	outline: 2px solid var( --highlightColor );
	// }
}

.madlib__input:empty {
	border-bottom: 2px solid transparent;
	position: relative;
	z-index: 1;
	vertical-align: middle;
}

// Themed core button component
.components-button.is-primary.acquire-intent__question-skip:not( :disabled ):not( [aria-disabled='true'] ) {
	background: var( --mainColor );
	border-color: var( --mainColor );
	border-radius: 4px;
	box-shadow: none;
	color: var( --contrastColor );
	@include onboarding-medium-text;
	// stylelint-disable-next-line scales/font-weight
	font-weight: 500;
	letter-spacing: 0;
	padding: 20px 32px;
	// @TODO: work out hover-state animations
	transition: background $acquire-intent-transition-duration
			$acquire-intent-transition-algorithm,
		border-color $acquire-intent-transition-duration
			$acquire-intent-transition-algorithm,
		color $acquire-intent-transition-duration $acquire-intent-transition-algorithm;

	&:active,
	&:hover,
	&:focus {
		background: var( --highlightColor );
		border-color: var( --highlightColor );
		color: var( --contrastColor );
		outline-color: transparent;
		box-shadow: none;
	}
}

.components-button.is-link.acquire-intent__skip-vertical {
	@include onboarding-medium-text;
	color: var( --studio-gray-40 );
}

.site-title {
	transition: opacity $acquire-intent-transition-duration $acquire-intent-transition-algorithm;

	&--hidden {
		visibility: hidden;
		opacity: 0;

		& + .acquire-intent__footer {
			transform: translate( 0, -80px ); // Translate button up when site title is hidden
		}
	}
}

.site-title__input-wrapper {
	display: block;
	position: relative;
	min-height: 40px; // make sure there is a tappable area on mobile when the input is empty

	.madlib__input:empty {
		@include break-small {
			padding-right: 300px; // there's not enough container width on smaller screens
		}
		@include break-medium {
			padding-right: 400px;
		}
	}

	@include break-small {
		display: inline;
	}
}

.site-title__placeholder {
	display: inline-block;
	width: 100%;
	color: var( --studio-gray-5 );
	cursor: text;

	@include break-small {
		height: 80px;
		position: absolute;
		left: 0;
		z-index: 2;
	}

	&::after {
		content: '';
		position: absolute;
		left: 0;
		right: 0;
		bottom: -2px;
		height: 2px;
		background-image: linear-gradient( to right, rgba( 238, 238, 238, 1 ), rgba( 238, 238, 238, 0.4 ) );
	}
}

/* hide the placeholder when input is not empty */
.madlib__input:not( :empty ) ~ .site-title__placeholder {
	display: none;
}

.madlib__input:focus ~ .site-title__placeholder {
	@include break-small {
		display: none;
	}
}

